Small fixes keyword collapser

--- a/ecolex/static/bootstrap/less/shame.less
+++ b/ecolex/static/bootstrap/less/shame.less
@@ -381,3 +381,11 @@
   margin-bottom: .5em;
   font-size: @font-size-h5;
 }
+
+.collapse-keywords a {
+    color: @gray-dark;
+    &:hover,
+    &:focus {
+      color: @link-hover-color;
+    }
+}
